adicionado o droppable e adicionada a borda nos itens ativos

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 		<div id="editor-main">
 			<div id="conteudo">
 				<h1>Itens de Notícia</h1>
-				<div id="NewsItems" class="sortable">
+				<div id="NewsItems" class="">
 				</div>
 			</div>
 			<div id="pagina">
 				<h1>Sua página:</h1>
 				<div id="page-layout">
-					<div id="page-header" class="page-region">
+					<div id="page-header" class="page-region sortable droppable">
 					</div>
-					<div id="page-content" class="page-region">
+					<div id="page-content" class="page-region sortable droppable">
 					</div>
-					<div id="page-right" class="page-region">
+					<div id="page-right" class="page-region sortable droppable">
 					</div>
-					<div id="page-footer" class="page-region">
+					<div id="page-footer" class="page-region sortable droppable">
 					</div>
 				</div>	
 			</div>
