criada a estrutura para adicionar componentes

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 			</div>
 			<div id="formatos">
 				<h1>Formatos de apresentação</h1>
+				<div id="componentes" class="">
+				</div>
 			</div>
 		</div>
 
 		<script src="js/jquery-1.9.1.min.js" type="text/javascript"> </script>
 		<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+		<script src="config.js" type="text/javascript"> </script>
 		<script src="js/NewsItem.js" type="text/javascript"> </script>
 		<script src="js/fake.js" type="text/javascript"> </script>
 		<script src="js/editor.js" type="text/javascript"/> </script>
