--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html class="no-js" lang="en-US"> 
+<html class="no-js" lang="en-US">
 	<head>
 	<meta charset="utf-8">
 		<title>Editor de Capa</title>
-		<link href="css/editor.css" rel="stylesheet" type="text/css" media="screen" />	
+		<link href="css/editor.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
 
 	<body>
@@ -15,15 +15,15 @@
 			<div id="pagina">
 				<h1>Sua página:</h1>
 				<div id="page-layout">
-					<div id="page-header" class="page-region sortable droppable">
+					<div id="page-header" class="page-region region_sortable region_droppable">
 					</div>
-					<div id="page-content" class="page-region sortable droppable">
+					<div id="page-content" class="page-region region_sortable region_droppable">
 					</div>
-					<div id="page-right" class="page-region sortable droppable">
+					<div id="page-right" class="page-region region_sortable region_droppable">
 					</div>
-					<div id="page-footer" class="page-region sortable droppable">
+					<div id="page-footer" class="page-region region_sortable region_droppable">
 					</div>
-				</div>	
+				</div>
 			</div>
 			<div id="formatos">
 				<h1>Formatos de apresentação</h1>
